Bug 1602230 - Backed out changeset 1a85c571a464 (bug 1576946). a=RyanVM

This patch is for 73 beta

Differential Revision: https://phabricator.services.mozilla.com//D59249