devtools/server/actors/animation-type-longhand.js
@@ -135,6 +135,7 @@ exports.ANIMATION_TYPE_FOR_LONGHANDS = [
       "scroll-snap-align",
       "scroll-snap-type",
       "shape-rendering",
+      "-moz-stack-sizing",
       "scrollbar-width",
       "stroke-linecap",
       "stroke-linejoin",
