devtools/shared/css/generated/properties-db.js
@@ -1156,6 +1156,23 @@ exports.CSS_PROPERTIES = {
       "unset"
     ]
   },
+  "-moz-stack-sizing": {
+    "isInherited": false,
+    "subproperties": [
+      "-moz-stack-sizing"
+    ],
+    "supports": [],
+    "values": [
+      "ignore",
+      "ignore-horizontal",
+      "ignore-vertical",
+      "inherit",
+      "initial",
+      "revert",
+      "stretch-to-fit",
+      "unset"
+    ]
+  },
   "-moz-tab-size": {
     "isInherited": true,
     "subproperties": [
@@ -3325,6 +3342,7 @@ exports.CSS_PROPERTIES = {
       "-moz-box-flex",
       "-moz-box-orient",
       "-moz-box-pack",
+      "-moz-stack-sizing",
       "-moz-box-ordinal-group"
     ],
     "supports": [],
